# lok

./: .gitignore  AI-AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  lok.toml  shell.nix
.arf/records/20260207-062820/: 0001.arf  0002.arf  0003.arf  0004.arf  0005.arf  0006.arf  0007.arf  0008.arf  0009.arf  0010.arf  0011.arf  0012.arf  0013.arf  0014.arf  0015.arf  0016.arf  0017.arf  0018.arf  0019.arf  0020.arf  0021.arf  0022.arf  0023.arf  0024.arf  0025.arf  0026.arf  0027.arf  0028.arf  0029.arf  0030.arf  0031.arf  0032.arf  0033.arf  0034.arf  0035.arf  0036.arf  0037.arf  0038.arf
.github/workflows/: ci.yml  publish.yml  release.yml
examples/workflows/: fix.toml  full-heal.toml  pick-and-fix.toml  pick-and-propose.toml  review-pr.toml  rework-pr.toml  self-heal.toml
sessions/20260202-211411/: 1770066851.json
sessions/20260202-212118/: 1770067278.json
sessions/20260202-213214/: 1770067934.json
src/: arf.rs  cache.rs  conductor.rs  config.rs  context.rs  debate.rs  delegation.rs  git_agent.rs  main.rs  output.rs  spawn.rs  team.rs  utils.rs  workflow.rs
src/backend/: bedrock.rs  claude.rs  codex.rs  gemini.rs  mod.rs  ollama.rs
src/tasks/: audit.rs  ci.rs  fix.rs  hunt.rs  implement.rs  mod.rs  spec.rs
src/workflows/: audit.toml  diff.toml  explain.toml  hunt.toml  mod.rs
tests/: integration.rs
tests/workflows/: test_conditionals.toml  test_interpolation.toml  test_parallel.toml  test_retry.toml
