[package]
name = "council"
version = "0.1.0"
edition = "2021"
description = "Multi-LLM orchestration tool for code analysis"
authors = ["ducks"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
indicatif = "0.17"
colored = "2"
anyhow = "1"
dirs = "5"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
aws-config = "1"
aws-sdk-bedrockruntime = "1"
