[package]
name = "lok"
version = "20260124.0.1"
edition = "2021"
rust-version = "1.75"
description = "Local orchestration layer for coordinating multiple LLM backends"
authors = ["ducks"]
license = "MIT"
repository = "https://github.com/ducks/lok"
homepage = "https://github.com/ducks/lok"
documentation = "https://docs.rs/lok"
readme = "README.md"
keywords = ["llm", "ai", "orchestration", "codex", "gemini"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".bundle/",
    ".gems/",
    ".npm-global/",
    "log/",
    "tmp/",
    "target/",
]

[features]
default = []
bedrock = ["aws-config", "aws-sdk-bedrockruntime"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
indicatif = "0.17"
colored = "2"
anyhow = "1"
dirs = "5"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
which = "7"
aws-config = { version = "1", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
